--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,21 @@ langchain
 sentencepiece
 accelerate
 transformers
+boto3
+dbx
+py4j
+mlflow
+urllib3
+python-dateutil
+requests~=2.28.1
+wheel
+pyspark==3.3.*
+databricks-feature-store
+pytest~=7.2.0
+pytest-cov
+# The client must provide all these below.  They won't be automatically installed with this library.
+google-api-python-client
+google-auth-httplib2
+google-auth-oauthlib
+dnspython                   # Used only in dbacademy.classrooms.monitor.Commands.get_region
+setuptools~=65.5.0
