--- a/.env.local
+++ b/.env.local
@@ -13,4 +13,4 @@ SNOWFLAKE_DATABASE=
 SNOWFLAKE_WAREHOUSE=
 
 # Pinecone credentials
-PINECONE_API_KEY=
+PINECONE_API_KEY=c0897dba-bb99-4880-94f6-cce937fe1568
