--- a/.env.local
+++ b/.env.local
@@ -3,7 +3,7 @@
 # AWS credentials
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-AWS_REGION=
+AWS_REGION="us-east-1"
 
 # Snowflake credentials
 SNOWFLAKE_USER=
